--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -3,7 +3,8 @@
 .App {
   display: flex;
   flex-direction: column;
-  height: 100%;
+  min-height: 100%;
+  min-width: 100%;
   background-image: linear-gradient(to top left, $lightPurple, $lightGreen);
 
   .suit {
